# Teste-Claude-Coude

./: .gitignore  CLAUDE.md
backend/: .dev.vars.example  package-lock.json  package.json  pylock.toml  pyproject.toml  wrangler.toml
backend/src/: entry.py
backend/src/handlers/: chat.py  health.py
backend/src/lib/: router.py
backend/src/services/: llm.py  logging.py
frontend/: astro.config.mjs  package-lock.json  package.json  wrangler.jsonc
frontend/public/: legacy-landing.html
frontend/src/: content.config.ts
frontend/src/content/: config.ts
frontend/src/pages/: index.astro  lab.astro  oferta1.astro
